--- a/frontend/src/app/features/auth/register/register.scss
+++ b/frontend/src/app/features/auth/register/register.scss
@@ -32,6 +32,4 @@
   text-align: center;
 }
 
-.w-100 {
-  width: 100%;
-}
+
